# cycling-form

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yaml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/00-bootstrap-cost-guardrails/: 00-01-PLAN.md  00-01-SUMMARY.md  00-02-PLAN.md  00-02-SUMMARY.md  00-03-PLAN.md  00-03-SUMMARY.md  00-04-PLAN.md  00-04-SUMMARY.md  00-05-PLAN.md  00-05-SUMMARY.md  00-06-PLAN.md  00-06-SUMMARY.md  00-07-PLAN.md  00-CONTEXT.md  00-DISCUSSION-LOG.md  00-UAT.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.streamlit/: config.toml
docs/: architecture.md  filming-protocol.md
infra/kill-switch/: README.md  main.py  requirements.txt
lib/vision/: __init__.py  __main__.py  align.py  angles.py  cli.py  correlations.py  fit.py  overlay.py  pose.py  smoothing.py  strokes.py
samples/: sample-ride.fit
scripts/: bootstrap-gcp.env.example  bootstrap-gcp.sh  download-models.sh  generate-sample-fit.py  test-kill-switch.sh
tests/: test_align.py  test_angles.py  test_correlations.py  test_fit.py  test_imports.py  test_pose.py  test_smoothing.py  test_strokes.py
viewer/: __init__.py  app.py
