[project]
name = "vision"
version = "0.1.0"
description = "Cycling form & performance analyzer — pose + telemetry on GCP"
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Callum" }]
# Heavy ML/cloud deps live in optional groups so Phase 0 CI does NOT drag the
# MediaPipe / OpenCV / Google Cloud wheels into a base `uv sync`. Versions are
# pinned per .planning/research/STACK.md.
dependencies = []

[project.optional-dependencies]
pose = [
  "mediapipe>=0.10.35,<0.11",
  "opencv-python>=4.10,<4.11",
]
telemetry = [
  "garmin-fit-sdk>=21.205,<22",
]
data = [
  "polars>=1.40,<2",
  "pandas>=2.2,<3",
  "pyarrow>=17,<18",
  "pandas-gbq>=0.24,<0.25",
  "scipy>=1.14,<2",
  "numpy>=2.0,<3",
]
gcp = [
  "google-cloud-storage>=3.10,<4",
  "google-cloud-bigquery>=3,<4",
]
weather = [
  "openmeteo-requests>=1,<2",
]
viewer = [
  "streamlit>=1.55,<2",
  "plotly>=5.24,<6",
]
cli = [
  "typer>=0.12,<0.13",
  "pydantic>=2,<3",
]
# `uv sync --extra all` installs the full runtime stack in one shot.
all = [
  "vision[pose,telemetry,data,gcp,weather,viewer,cli]",
]

[dependency-groups]
# PEP 735 dev group — installed by default by `uv sync` (along with base deps).
# NOTE explicitly per STACK.md "What NOT to Use":
#   - NO legacy `python-fit-parse` (dormant; replaced by garmin-fit-sdk above)
#   - NO `mediapipe-silicon` fork (upstream mediapipe publishes Apple Silicon wheels)
#   - NO `requirements.txt` (uv.lock is the lockfile)
dev = [
  "ruff>=0.6,<0.7",
  "mypy>=1.11,<2",
  "pytest>=8,<9",
  "pytest-cov>=5,<6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Non-standard layout: package lives under `lib/vision/` to leave repo root
# uncluttered for `scripts/`, `infra/`, `docs/`, `pipeline/` later.
packages = ["lib/vision"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["uv.lock"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.format]
# Defaults: double quotes, trailing-comma magic.

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
files = ["lib", "tests"]
# Vendored upstream kill-switch code (Phase 0 D-04) is not ours to retype.
exclude = ["infra/kill-switch/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
# Make `import vision` work without an editable install detour during tests.
pythonpath = ["lib"]
